bot.log
  File "./rbpi.py", line 31
    <<<<<<< HEAD
     ^
IndentationError: expected an indented block
